# docling-kokoro-pdf2audio

./: .gitignore  README.md  pyproject.toml
LICENSES/: Apache-2.0.txt
src/pdf2audio/: main.py
